# RestJoc

./: README.md  meson.build  org.gnome.Restjoc.json
data/: meson.build  org.gnome.Restjoc.appdata.xml.in  org.gnome.Restjoc.desktop.in  org.gnome.Restjoc.gschema.xml
po/: POTFILES  meson.build
src/: argumentItem.py  main.py  meson.build  request.py  requestItem.py  restjoc.gresource.xml  restjoc.in  window.py
src/ui/: argumentItem.ui  requestItem.ui  settings.ui  window.ui
